@startuml

class User{
      id : int
      Pseudo : String
      Picture : String
}

class Game{
      id : int
      RoundNumber: int
      
}

class Round{
      id : int
}

class Stat{
      id : int
      gamePlayed : int
      victory : int
      defeat : int
      maxCombo : int
      totalCombo : int
      averageCombo : int
      minCombo : int
}

User <|-- Stat

Game o-- User : A game may have pany players

Round o-- User : A round as 4 players


@enduml